--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#243943" />
+    <meta name="theme-color" content="#121214" />
     <meta
       name="description"
-      content="Web site fabrica sim"
+      content="Web DeLorenzo/Fábrica sim"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Fábrica Sim</title>
+    <title>DeLorenzo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
